<resources>
    <string name="app_name">Woddy</string>
    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_like">님이 당신의 게시물에 좋아요를 눌렀습니다.</string>
    <string name="alarm_comment">님이 당신의 게시물에 댓글을 달았습니다.</string>
    <string name="alarm_chatting">님이 채팅을 보냈습니다.</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>

    <string name="frind">#친구찾기</string>
    <string name="help">#도움요청</string>
    <string name="mate">#퇴근메이트</string>

    <string name="club">#동호회</string>
    <string name="meeting">#번개모임</string>

    <string name="share">#물품공유</string>
    <string name="home">#홈</string>
    <string name="tgbuy">#공동구매</string>
    <string name="free_share">#무료나눔</string>

    <string name="free_talk">#자유</string>
    <string name="diy">#DIY</string>
    <string name="interior">#인테리어</string>
    <string name="town_info">#동네정보</string>

    <string name="info">#1인 생활</string>
    <string name="lifeSupport">#생활지원</string>
    <string name="education">#교육</string>
    <string name="event">#행사</string>

    <string name="infoDepart">#기관 정보</string>

</resources>