<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Search.SearchActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/beforebtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />

        <EditText
            android:id="@+id/searchWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="검색어를 입력해주세요."
            android:inputType="text"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_search_24" />

    </LinearLayout>>

    <HorizontalScrollView
        android:id="@+id/filterScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filterChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            app:chipSpacingHorizontal="10dp"
            app:chipSpacingVertical="6dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true"
            tools:visibility="visible">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLifeSupport"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lifeSupport"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEducation"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEvent"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event"
                android:textSize="18sp" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipFriend"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frind"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHelp"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMate"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mate"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipClub"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/club"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMeeting"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipShare"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHome"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBuy"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tgbuy"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFreeShare"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_share"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFreeTalk"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_talk"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDIY"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diy"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipInterior"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interior"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTownInfo"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/town_info"
                android:textSize="18sp" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="@color/main_color"
        android:text="검색 결과" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_round_shape_grayish_small_radius"
        android:padding="10dp" />

</LinearLayout>