<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notice.Fragment.FreeFragment">

    <HorizontalScrollView
        android:id="@+id/filterScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filterChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="4dp"
            app:chipSpacingVertical="6dp"
            app:singleLine="true"
            app:singleSelection="true"
            app:checkedChip="@id/chipFreeTalk"
            android:paddingHorizontal="12dp"
            app:selectionRequired="true"
            tools:visibility="visible">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFreeTalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_talk"
                style="@style/Widget.Woody.Chip"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDIY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diy"
                style="@style/Widget.Woody.Chip"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipInterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interior"
                style="@style/Widget.Woody.Chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTownInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/town_info"
                style="@style/Widget.Woody.Chip" />
        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="5dp"
        android:id="@+id/recyclerView_free"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>