<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostBoard.Fragment.FreeFragment">

    <HorizontalScrollView
        android:id="@+id/filterScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filterChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="15dp"
            app:checkedChip="@id/chipFreeTalk"
            app:chipSpacingHorizontal="10dp"
            app:chipSpacingVertical="6dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true"
            tools:visibility="visible">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFreeTalk"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/free_talk"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDIY"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/diy"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipInterior"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/interior"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTownInfo"
                style="@style/Widget.Woody.Chip"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/town_info"
                android:textSize="18sp" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_free"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>